@@ -1,3 +1,12 @@
+2014-02-25  Alessandro <aantonello@paralaxe.com.br>
+
+	* CXmlFile.java (Load(CXmlTok)): Dumping stream output when the parser
+	  fails.
+	* AbstractView.java (invalidate()): Added function to invalidate the
+	  operating View.
+	* AbstractView.java (invalidate()): Added function to invalidate the
+	  operating View.
+
 2014-02-12  Alessandro <aantonello@paralaxe.com.br>
 
 	* stream_t.java (dump()): Changed debugging output format.
